Fixed invalid reference in app package creation

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -96,8 +96,7 @@ jobs:
       env:
         AppxBundle: Never
         BuildMode: SideloadOnly
-        Configuration: Debug
-        TargetPlatform: ${{ matrix.targetplatform }}
+        Configuration: ${{ matrix.configuration }}
 
     # Remove the pfx
     - name: Remove the pfx
