Set the platform to any cpu

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -92,11 +92,10 @@ jobs:
 
     # Create the app package by building and packaging the Windows Application Packaging project
     - name: Create the app package
-      run: msbuild $env:Solution_Name /p:Platform=$env:TargetPlatform /p:Configuration=${{ matrix.configuration }} /p:UapAppxPackageBuildMode=$env:BuildMode /p:AppxBundle=$env:AppxBundle /p:PackageCertificateKeyFile=GitHubActionsWorkflow.pfx /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
+      run: msbuild $env:Solution_Name /p:Platform="Any CPU" /p:Configuration=${{ matrix.configuration }} /p:UapAppxPackageBuildMode=$env:BuildMode /p:AppxBundle=$env:AppxBundle /p:PackageCertificateKeyFile=GitHubActionsWorkflow.pfx /p:PackageCertificatePassword=${{ secrets.Pfx_Key }}
       env:
         AppxBundle: Never
         BuildMode: SideloadOnly
-        TargetPlatform: x86|x64
 
     # Remove the pfx
     - name: Remove the pfx
